# origin-main

Advanced_programming/1.2_std_Variant/: 1.2_std_Variant.vcxproj.filters
Advanced_programming/1_1_Lambda_function/: 1_1_Lambda_function.cpp  1_1_Lambda_function.vcxproj  1_1_Lambda_function.vcxproj.filters
Advanced_programming/3.The_life_cycle_of_an_object_RAII/3.1_Smart_array/: 3.1_Smart_array.cpp  3.1_Smart_array.vcxproj  CMakeLists.txt  Exception.h
Advanced_programming/3.The_life_cycle_of_an_object_RAII/3.2_Smart_arrays_copying/: 3.1_Smart_array.vcxproj  3.2_Smart_arrays_copying.cpp  3.2_Smart_arrays_copying.sln  CMakeLists.txt  Exception.cpp
Advanced_programming/3_1_Operations_on_corners/: 3_1_Operations_on_corners.vcxproj  3_1_Operations_on_corners.vcxproj.filters
Advanced_programming/Compilation and linking/2.1_Program_with_errors/: 2.1_Program_with_errors.cpp  2.1_Program_with_errors.sln  2.1_Program_with_errors.vcxproj  2.1_Program_with_errors.vcxproj.filters
Advanced_programming/Compilation and linking/2.2_Solid_errors/: 2.2_Solid_errors.cpp  2.2_Solid_errors.sln  2.2_Solid_errors.vcxproj  2.2_Solid_errors.vcxproj.filters
Advanced_programming/Новшества С++/1.2_std_Variant/: 1.2_std_Variant.cpp  1.2_std_Variant.sln  1.2_std_Variant.vcxproj
Advanced_programming/Новшества С++/1_1_Lambda_function/: 1_1_Lambda_function.cpp  1_1_Lambda_function.sln
Advanced_programming/Новшества С++/1_3_Operations_on_corners/: 3_1_Operations_on_corners.cpp  3_1_Operations_on_corners.sln
Advanced_programming/Тестирование/4_1_Task/: CMakeLists.txt  test_1.cpp
Advanced_programming/Тестирование/4_2_Task/: CMakeLists.txt  test_2.cpp
Advanced_programming/Шаблоны функций и функторы/5_1_template_/: CMakeLists.txt  main.cpp  template.h
Advanced_programming/Шаблоны функций и функторы/5_2_Table/: 5_2_Table.cpp  5_2_Table.h  CMakeLists.txt
Algorithms and data structures/: hw1_1.docx
Algorithms and data structures/Grafs/Bfs/: Bfs.cpp  Bfs.sln  (+2 more)
Basic programming in C++/Building and connecting libraries/Task2_Dynamic_library/Task2_Dynamic_library/: CMakeLists.txt  Leaver.cpp  Leaver.h  Task2_Dynamic_library.sln  Task2_Dynamic_library.vcxproj  dllmain.cpp
Basic programming in C++/Building and connecting libraries/Task3_Dynamic_CMake_Library/cmake/: CMakeLists.txt
Basic programming in C++/Building and connecting libraries/Task3_Dynamic_CMake_Library/cmake/Task2_Dynamic_library/: CMakeLists.txt  Leaver.h
Basic programming in C++/CMake/Task_2_The_project_is_more_complicated/: CMakeLists.txt  Figure.h  Quadrangle.h  Task 3. Class hierarchy.sln  Task 3. Class hierarchy.vcxproj.filters  Task_3_Class_hierarchy.cpp  equilTriangle.h  isosTriangle.cpp  parallelogram.cpp  parallelogram.h  rhomb.cpp  square.h
Basic programming in C++/Course_project/CMake/: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp
Basic programming in C++/Course_project/CMake/AirVehicles/: AirVehicles.cpp  AirVehicles.h  Broom.cpp  Broom.h  CarpetPlane.cpp  CarpetPlane.h  Eagle.cpp  Eagle.h
Basic programming in C++/Course_project/CMake/DynamicVehicles/: DynamicVehicles.cpp  DynamicVehicles.h
Basic programming in C++/Course_project/CMake/GraundVehicles/: BootsAllTerrain.cpp  BootsAllTerrain.h  Camel.cpp  Camel.h  CamelSpeedWalker.cpp  CamelSpeedWalker.h  Centaur.cpp  Centaur.h  GraundVehicles.cpp  GraundVehicles.h
(+226 files in other folders)
